kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datareporter-web
spec:
  selector:
    matchLabels:
      app: datareporter
      tier: web
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 4
  template:
    metadata:
      labels:
        app: datareporter
        tier: web
    spec:
      containers:
      - name: datareporter-web
        image: eu.gcr.io/datareporter/datareporter:_
        imagePullPolicy: Always
        resources:
          requests:
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /ping
            port: dr-port
          initialDelaySeconds: 60
          timeoutSeconds: 60
        ports:
          - name: dr-port
            containerPort: 5000
        args: ["server"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datareporter-worker
spec:
  selector:
    matchLabels:
      app: datareporter
      tier: worker
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 4
  template:
    metadata:
      labels:
        app: datareporter
        tier: worker
    spec:
      containers:
      - name: datareporter-worker
        image: eu.gcr.io/datareporter/datareporter:_
        imagePullPolicy: Always
        resources:
          requests:
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /ping
            port: dr-port
          initialDelaySeconds: 60
          timeoutSeconds: 60
        args: ["scheduler"]
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: datareporter-lb
  spec:
    selector:
      matchLabels:
        app: datareporter
        tier: lb
    strategy:
      rollingUpdate:
        maxUnavailable: 1
        maxSurge: 4
    template:
      metadata:
        labels:
          app: datareporter
          tier: lb
      spec:
        containers:
          - name: datareporter-nginx
            image: eu.gcr.io/datareporter/nginx:_
            ports:
              - name: nginx
                containerPort: 80
