kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datareporter-backend
spec:
  type: NodePort
  selector:
    app: datareporter
    tier: backend
  ports:
    - name: dr-backend
      port: 5000
---
  apiVersion: v1
  kind: Service
  metadata:
    name: datareporter-frontend
  spec:
    type: LoadBalancer
    selector:
      app: datareporter
      tier: frontend
    ports:
      - name: dr-frontend
        port: 80
