kubernetes/base/ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: datareporter-worker
spec:
  backend:
    serviceName: datareporter-worker
    servicePort: 5000
